# chatminal

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
apps/chatminal-app/: Cargo.toml
apps/chatminal-app/src/: config.rs  main.rs  terminal_attach_frame_renderer.rs  terminal_attach_tui.rs  terminal_commands.rs  terminal_dashboard_tui.rs  terminal_dashboard_watch.rs  terminal_desktop_launcher.rs  terminal_pane_adapter.rs  terminal_pane_emulator.rs  terminal_pane_emulator_tests.rs  terminal_pane_registry.rs  terminal_pane_stdout_adapter.rs  terminal_session_commands.rs  terminal_wezterm_attach_frame_renderer.rs  terminal_wezterm_attach_tui.rs  terminal_wezterm_commands.rs  terminal_wezterm_core.rs  terminal_wezterm_core_tests.rs  terminal_wezterm_dashboard_tui.rs  terminal_wezterm_dashboard_watch.rs  terminal_wezterm_gui_launcher.rs  terminal_wezterm_gui_proxy.rs  terminal_workspace_ascii_renderer.rs  terminal_workspace_ascii_renderer_tests.rs  terminal_workspace_binding_runtime.rs  terminal_workspace_binding_runtime_tests.rs  terminal_workspace_view_model.rs  terminal_workspace_view_model_tests.rs
apps/chatminal-app/src/input/: ime_commit_deduper.rs  ime_composition_state.rs  mod.rs  pty_key_translator.rs  terminal_input_encoder.rs  terminal_input_event.rs  terminal_input_shortcut_filter.rs
apps/chatminal-app/src/ipc/: client.rs  client_runtime.rs  client_tests.rs  frame_decoder.rs  mod.rs  transport.rs
apps/chatminal-app/src/ipc/transport/: mod.rs  unix.rs  unsupported.rs  windows.rs
apps/chatminal-app/src/terminal_quality_benchmark/: mod.rs  runner.rs  stats.rs
apps/chatminal-app/src/window/: mod.rs  native_window_wezterm.rs  native_window_wezterm_actions.rs  native_window_wezterm_controller.rs  native_window_wezterm_input_mapper.rs  native_window_wezterm_input_worker.rs  native_window_wezterm_reducer.rs
apps/chatminal-app/src/window_wezterm_gui/: chatminal_ipc_mux_domain.rs  chatminal_ipc_mux_domain_tests.rs  mod.rs
apps/chatminal-desktop/: Cargo.toml  build.rs
apps/chatminal-desktop/assets/windows/conhost/: README.md
apps/chatminal-desktop/src/: chatminal_session_surface.rs  commands.rs  customglyph.rs  download.rs  frontend.rs  glyph-frag.glsl  glyphcache.rs  inputmap.rs  main.rs  renderstate.rs  scrollbar.rs  selection.rs  shapecache.rs  spawn.rs  system_metrics.rs  tabbar.rs  update.rs  utilsprites.rs
apps/chatminal-desktop/src/chatminal_runtime/: client.rs  domain.rs  mod.rs  pane.rs  session_pane.rs
apps/chatminal-desktop/src/chatminal_sidebar/: mod.rs
apps/chatminal-desktop/src/overlay/: confirm.rs  confirm_close_pane.rs  copy.rs  debug.rs  launcher.rs  mod.rs  prompt.rs  quickselect.rs  selector.rs
apps/chatminal-desktop/src/scripting/: guiwin.rs  mod.rs
apps/chatminal-desktop/src/termwindow/: background.rs  box_model.rs  charselect.rs  clipboard.rs  keyevent.rs  mod.rs  modal.rs  mouseevent.rs  palette.rs  paneselect.rs  resize.rs  selection.rs  spawn.rs  webgpu.rs
apps/chatminal-wezterm-gui/: Cargo.toml  build.rs
apps/chatminal-wezterm-gui/src/termwindow/: mod.rs
apps/chatminald/: Cargo.toml
apps/chatminald/src/: config.rs  main.rs  server.rs  session.rs  state.rs
apps/chatminald/src/state/: explorer_utils.rs  request_handler.rs  runtime_lifecycle.rs  session_event_processor.rs  session_explorer.rs  tests.rs
apps/chatminald/src/transport/: mod.rs  unix.rs
crates/chatminal-engine-cell/: Cargo.toml
crates/chatminal-engine-cell/src/: color.rs  image.rs  lib.rs
crates/chatminal-engine-dynamic/: Cargo.toml
crates/chatminal-engine-dynamic-derive/: Cargo.toml
crates/chatminal-engine-dynamic-derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
crates/chatminal-engine-dynamic/src/: lib.rs
crates/chatminal-engine-dynamic/tests/: fromdynamic.rs  todynamic.rs
crates/chatminal-engine-input-types/: Cargo.toml
crates/chatminal-engine-input-types/src/: lib.rs
crates/chatminal-engine-surface/: Cargo.toml
crates/chatminal-engine-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
crates/chatminal-engine-surface/src/line/: cellref.rs  clusterline.rs  line.rs  test.rs  vecstorage.rs
crates/chatminal-engine-term/: Cargo.toml  README.md
crates/chatminal-engine-term/src/: color.rs  config.rs  input.rs  lib.rs  screen.rs  terminal.rs
crates/chatminal-engine-term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  performer.rs  sixel.rs
crates/chatminal-engine-term/src/test/: mod.rs
crates/chatminal-runtime/: Cargo.toml
crates/chatminal-runtime/src/: config.rs  lib.rs  metrics.rs  server.rs  session.rs  state.rs
crates/chatminal-runtime/src/api/: mod.rs  protocol.rs
crates/chatminal-runtime/src/state/: explorer_utils.rs  native_api.rs  protocol_adapter.rs  protocol_clients.rs  runtime_bridge.rs  runtime_lifecycle.rs  session_event_processor.rs  session_explorer.rs  tests.rs
crates/chatminal-runtime/src/transport/: windows.rs
crates/chatminal-session-runtime/: Cargo.toml
crates/chatminal-session-runtime/src/: engine_surface_adapter.rs  leaf_runtime.rs  leaf_runtime_command.rs  leaf_runtime_registry.rs  leaf_runtime_registry_tests.rs  leaf_runtime_tests.rs  leaf_runtime_threads.rs  lib.rs  runtime_bridge.rs  session_core_ids.rs  session_core_state.rs  session_engine.rs  session_engine_core.rs  session_engine_core_tests.rs  session_engine_shared.rs  session_event_bus.rs  session_focus_manager.rs  session_ids.rs  session_layout_tree.rs  session_snapshot.rs  session_spawn_manager.rs  session_surface.rs  workspace_host.rs
crates/chatminal-termwiz/: CHANGELOG.md  Cargo.toml
crates/chatminal-termwiz/data/: chatminal  chatminal.terminfo
crates/chatminal-termwiz/examples/: gennerdfonts.rs
crates/chatminal-termwiz/src/: error.rs  input.rs  lib.rs
crates/chatminal-termwiz/src/caps/: mod.rs  probed.rs
crates/chatminal-termwiz/src/render/: windows.rs
docs/: code-standards.md  index.md  (+10 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: chatminald_client.rs  config.rs  main.rs  models.rs  persistence.rs  runtime_backend.rs  service.rs
(+457 files in other folders)
