[workspace]
members = [
  "apps/chatminald",
  "apps/chatminal-app",
  "crates/chatminal-terminal-core",
  "crates/chatminal-protocol",
  "crates/chatminal-store",
]
default-members = [
  "apps/chatminald",
  "apps/chatminal-app",
  "crates/chatminal-terminal-core",
  "crates/chatminal-protocol",
  "crates/chatminal-store",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
