[package]
name = "chatminal-tauri"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2.4.1"
portable-pty = "0.9.0"
tokio = { version = "1.49.0", features = ["sync"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
indexmap = "2.13.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
log = "0.4.29"
env_logger = "0.11.9"
libc = "0.2.182"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.0.3"
dirs = "6.0.0"
notify = "8.2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
