[package]
name = "chatminal-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chatminal-protocol = { path = "../../crates/chatminal-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
wezterm-term = { git = "https://github.com/wez/wezterm", rev = "05343b387085842b434d267f91b6b0ec157e4331" }
crossterm = "0.29.0"
