[package]
name = "chatminal-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chatminal-protocol = { path = "../../crates/chatminal-protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
wezterm-term = { path = "../../third_party/wezterm/term" }
crossterm = "0.29.0"
eframe = { version = "0.33.2", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
whoami = "1.6.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
] }
