[package]
name = "chatminald"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chatminal-protocol = { path = "../../crates/chatminal-protocol" }
chatminal-store = { path = "../../crates/chatminal-store" }
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
env_logger = "0.11.9"
indexmap = "2.13.0"
dirs = "6.0.0"
