[package]
name = "chatminald"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
chatminal-protocol = { path = "../../crates/chatminal-protocol" }
chatminal-store = { path = "../../crates/chatminal-store" }
portable-pty.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.29"
env_logger = "0.11.9"
indexmap = "2.13.0"
dirs = "6.0.0"
whoami = "1.6.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Pipes",
] }
