[package]
authors = ["Wez Furlong"]
name = "chatminal-engine-cell"
version = "0.1.0"
edition = "2024"
description = "Model a Cell in a Terminal display"
license = "MIT"
documentation = "https://docs.rs/engine-cell"
keywords = ["terminal", "cell"]

[lib]
name = "engine_cell"

[dependencies]
finl_unicode.workspace = true
image = {workspace=true, optional=true}
log = {workspace = true, optional=true}
ordered-float = {workspace = true, optional=true}
sha2 = {workspace=true, optional=true}
serde = {workspace=true, optional=true}
thiserror = {workspace=true, optional=true}
engine-blob-leases = {workspace = true, optional=true}
engine-char-props.workspace = true
engine-color-types.workspace = true
engine-escape-parser.workspace = true
engine-dynamic.workspace = true

[features]
std = ["serde/std", "engine-char-props/std", "engine-color-types/std", "engine-escape-parser/std", "engine-dynamic/std", "finl_unicode/std"]
use_serde = ["dep:serde", "engine-color-types/use_serde", "engine-escape-parser/use_serde"]
use_image = ["dep:image", "dep:engine-blob-leases", "dep:log", "dep:ordered-float", "dep:sha2", "dep:thiserror"]

[dev-dependencies]
