[package]
name = "chatminal-engine-dynamic"
version = "0.2.1"
edition = "2021"
description = "config serialization for Chatminal via dynamic json-like data values"
license = "MIT"

[lib]
name = "engine_dynamic"

[features]
std = ["thiserror/std", "dep:strsim", "ordered-float/std"]

[dependencies]
log.workspace = true
ordered-float = {workspace = true, features=["libm"]}
strsim = {workspace = true, optional=true}
thiserror = {version="2.0", default-features=false}
engine-dynamic-derive.workspace = true

[dev-dependencies]
maplit.workspace = true
