[package]
name = "chatminal-engine-input-types"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2021"
description = "config serialization for Chatminal via dynamic json-like data values"
license = "MIT"

[lib]
name = "engine_input_types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
euclid.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
engine-dynamic.workspace = true

[features]
default = ["serde", "std"]
std = ["serde/std", "euclid/std"]
