[package]
authors = ["Wez Furlong <wez@wezfurlong.org>"]
name = "chatminal-engine-term"
version = "0.1.0"
edition = "2018"
description = "The virtual terminal emulator core from Chatminal; helpful for implementing terminal emulators"
license = "MIT"
documentation = "https://docs.rs/engine-term"
keywords = ["terminal", "emulator", "vte"]
readme = "README.md"

[lib]
name = "engine_term"

[features]
use_serde = ["termwiz/use_serde", "engine-cell/use_serde", "engine-escape-parser/use_serde", "engine-surface/use_serde"]

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
csscolorparser.workspace = true
downcast-rs.workspace = true
finl_unicode.workspace = true
hex.workspace = true
humansize.workspace = true
image.workspace = true
lazy_static.workspace = true
log.workspace = true
lru.workspace = true
miniz_oxide.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
serde = {workspace=true, features = ["rc"]}
terminfo.workspace = true
unicode-normalization.workspace = true
url.workspace = true
engine-bidi.workspace = true
engine-dynamic = {workspace = true, features=["std"]}
engine-cell = {workspace = true, features=["std", "use_image"]}
engine-escape-parser = {workspace = true, features=["std", "use_image"]}
engine-surface = {workspace = true, features=["std", "appdata", "use_image"]}

[dev-dependencies]
env_logger.workspace = true
k9.workspace = true

[dependencies.termwiz]
workspace = true
features = ["use_image"]
