[package]
authors = ["Wez Furlong"]
name = "chatminal-termwiz"
version = "0.24.0"
edition = "2018"
description = "Terminal Wizardry for Unix and Windows"
license = "MIT"
documentation = "https://docs.rs/termwiz"
keywords = ["terminal", "readline", "console", "curses"]
readme = "README.md"
publish = false

[lib]
name = "termwiz"

[dependencies]
anyhow.workspace = true
bitflags = "2.0"
cassowary = {workspace=true, optional=true}
fancy-regex.workspace = true
filedescriptor.workspace = true
finl_unicode.workspace = true
fixedbitset.workspace = true
fnv = {workspace=true, optional=true}
image = {workspace=true, optional=true}
libc.workspace = true
log.workspace = true
memmem.workspace = true
num-derive.workspace = true
num-traits.workspace = true
ordered-float = {workspace = true, features=["std"]}
pest = {workspace=true, optional=true}
pest_derive = {workspace=true, optional=true}
phf.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
sha2 = {workspace=true, optional=true}
siphasher.workspace = true
terminfo.workspace = true
thiserror.workspace = true
ucd-trie.workspace = true
unicode-segmentation.workspace = true
vtparse.workspace = true
engine-bidi.workspace = true
engine-blob-leases = {workspace=true, optional=true}
engine-cell = {workspace = true, features=["std"]}
engine-char-props.workspace = true
engine-color-types = {workspace = true, features=["std"]}
engine-dynamic = {workspace = true, features=["std"]}
engine-escape-parser = {workspace = true, features=["std"]}
engine-input-types.workspace = true
engine-surface = {workspace = true, features=["std", "appdata"]}

[features]
default = ["image", "tmux_cc"]
widgets = ["cassowary", "fnv"]
use_serde = ["serde", "engine-color-types/use_serde", "engine-blob-leases/serde", "bitflags/serde", "engine-input-types/serde", "engine-escape-parser/use_serde", "engine-cell/use_serde", "engine-surface/use_serde"]
use_image = ["image", "dep:image", "engine-escape-parser/use_image", "engine-escape-parser/kitty-shm", "engine-cell/use_image", "engine-surface/use_image"]
image = ["sha2", "engine-blob-leases", "engine-escape-parser/image"]
tmux_cc = ["pest", "pest_derive", "engine-escape-parser/tmux_cc"]
docs = ["widgets", "use_serde", "image", "tmux_cc"]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
k9.workspace = true

[target."cfg(unix)".dependencies]
signal-hook.workspace = true
termios.workspace = true
nix = {workspace=true, features=["mman", "fs"]}

[target."cfg(windows)".dependencies.winapi]
features = [
    "winbase",
    "winerror",
    "winnls",
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "synchapi",
    "memoryapi",
    "winnt",
    "impl-default"
]
workspace = true

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[[bench]]
name = "cell"
harness = false
